# SlurmJobManager

./: .gitignore  LICENSE.txt  README.md  jobmanager  pyproject.toml
jobmanager/: cli.py
